# vtk

./: .gitignore  Cargo.toml  Makefile  README.md  shader-rust-gen
crates/shader-binding-generator/: Cargo.toml
crates/shader-binding-generator/src/: main.rs
crates/vtk/: Cargo.toml  Justfile  Makefile  README.md  build.rs  cbindgen.toml
crates/vtk-basic-example/: Cargo.toml  README.md  build.rs
crates/vtk-basic-example/shaders/: common_view_projection.glsl  triangle.vert
crates/vtk-basic-example/src/: main.rs
crates/vtk/native/: vtk_android.c  vtk_array.h  vtk_cffi.c  vtk_cffi.h  vtk_cffi_vulkan.h  vtk_internal.h  vtk_log.h  vtk_mac.c  vtk_mac.h  vtk_platform.h  vtk_vulkan.h  vtk_vulkan_setup.c  vtk_wayland.c  vtk_wayland_keyboard.c  vtk_wayland_keyboard.h  vtk_window.c  vulkan_main.c  vulkan_main.h  vulkan_main.m  vulkan_wrapper.c  vulkan_wrapper.h
crates/vtk/src/: cffi.rs  lib.rs  rustffi.rs
example-android-app/: README.md  build.gradle
example-android-app/app/: build.gradle
example-android-app/app/src/main/: AndroidManifest.xml
example-android-app/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  GameActivitySources.cpp  VulkanMain.cpp  VulkanMain.hpp  vulkan_main.c  vulkan_main.cpp  vulkan_main.h  vulkan_wrapper.cpp  vulkan_wrapper.h
example-android-app/app/src/main/java/com/android/example/vulkan/tutorials/five/: MainActivity.java
example-android-app/app/src/main/java/net/fornwall/vulkan/example/: MainActivity.java
example-android-app/app/src/main/res/values/: themes.xml
example-android-app/app/src/main/shaders/: grid-shader.frag  tri.frag  tri.vert
example-android-app/gradle/wrapper/: gradle-wrapper.properties
shaders/: triangle.vert
src/: .lib.rs.swp  lib.rs  main.rs  rustffi.rs
vulkan/: cffi.h  ffi.h  vulkan_main.c  vulkan_main.h  vulkan_wrapper.c
