[package]
name = "vtk"
version = "0.1.0"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "dylib"]

[dependencies]
bitflags = "*"
glam = "*"

[build-dependencies]
cc = "1.0"
cbindgen = "0"
bindgen = "0"

[target.'cfg(target_os = "macos")'.build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
plist = { version = "1.0" }
