[package]
name = "vtk"
version = "0.1.1"
license = "MIT"
description = "Experimental Vulkan Toolkit"
repository = "https://github.com/fornwall/vtk"
rust-version = "1.74"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
# If vulkan validation layers should be enabled:
validation = []

[dependencies]
bitflags = "2"

[build-dependencies]
cc = "1.0"
cbindgen = "0"
bindgen = "0"

[target.'cfg(target_os = "macos")'.build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
plist = { version = "1.0" }
